# ACM-Compass

./: .gitignore  CLAUDE.md  README.md  bookmarklet.js  generate_bookmarklet.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  start.ps1  start.sh
docs/: tech.md
scripts/: start.ps1  start.sh
server/: package-lock.json  package.json
server/src/: data.ts  git.ts  index.ts  types.ts
src/: data_manager.py  git_utils.py  models.py
src/ui/: banner.py  contests.py  git_sync.py  problems.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/pages/: ContestsPage.tsx  GitSyncPage.tsx  ProblemsPage.tsx
web/src/services/: api.ts
web/src/types/: index.ts
