[project]
name = "acm-compass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=5.49.1",
    "pydantic>=2.11.10",
    "pandas>=2.2.3",
    "pymdown-extensions>=10.12",
    "setuptools>=80.9.0",
    "fastapi>=0.121.1",
    "uvicorn>=0.38.0",
]
